Rapid Prd/src/objects/Industry__c.object
<CustomObject>
    <fields>
        <fullName>Accountable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Accountable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>AgileCap__c</fullName>
        <defaultValue>false</defaultValue>
        <label>AgileCap</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Aquila__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Aquila</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Atlantis_Mortgage__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Atlantis Mortgage</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>BFS__c</fullName>
        <defaultValue>false</defaultValue>
        <label>BFS</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>CNH_Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>CNH Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Construction_Finance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Construction Finance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credibly__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Credibly</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ECG__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ECG</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FORA__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FORA</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FundKite__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FundKite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fund_Amental__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fund-Amental</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fundation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fundation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Fundbox__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Fundbox</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Greenwich_Capital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Greenwich Capital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Headway_Capital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Headway Capital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Interface_Financial__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Interface Financial</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Iron_Horse_Credit__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Iron Horse Credit</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>KatalystFP__c</fullName>
        <defaultValue>false</defaultValue>
        <label>KatalystFP</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Knight_Capital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Knight Capital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LenCred__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LenCred</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lendio__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lendio</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lendistry__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lendistry</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Lendr__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Lendr</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Levy_Associates__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Levy &amp; Associates</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Libertas__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Libertas</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>National_Funding__c</fullName>
        <defaultValue>false</defaultValue>
        <label>National Funding</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Platinum_Rapid__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Platinum Rapid</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Principis_Capital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Principis Capital</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RapidAdvance__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RapidAdvance</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Search__c</fullName>
        <defaultValue>&quot;All&quot;</defaultValue>
        <label>Search</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Seek__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Seek</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>SmartBiz__c</fullName>
        <defaultValue>false</defaultValue>
        <label>SmartBiz</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Snap_Advances__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Snap Advances</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Strategic__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Strategic</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Super_G__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Super G</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>The_Fundworks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>The Fundworks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Uplyft__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Uplyft</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>World_Business_Lenders__c</fullName>
        <defaultValue>false</defaultValue>
        <label>World Business Lenders</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>X24Capital__c</fullName>
        <defaultValue>false</defaultValue>
        <label>24Capital</label>
        <type>Checkbox</type>
    </fields>
    <label>Industry</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>RapidAdvance__c</columns>
        <columns>AgileCap__c</columns>
        <columns>FORA__c</columns>
        <columns>BFS__c</columns>
        <columns>ECG__c</columns>
        <columns>Knight_Capital__c</columns>
        <columns>Strategic__c</columns>
        <columns>Platinum_Rapid__c</columns>
        <columns>Snap_Advances__c</columns>
        <columns>Fund_Amental__c</columns>
        <columns>Construction_Finance__c</columns>
        <columns>Super_G__c</columns>
        <columns>CNH_Finance__c</columns>
        <columns>Fundbox__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Industry Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Industries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>